# space-bevy

./: .gitignore  Cargo.toml
assets/: billboard.vert
crates/bevy-dynamic-billboarding/: Cargo.toml
crates/bevy-dynamic-billboarding/src/: add_shader.rs  events.rs  lib.rs  render_to_texture.rs  tags.rs  texture_node.rs
crates/bevy-dynamic-object-scaling/: Cargo.toml
crates/bevy-origin-rebasing/: Cargo.toml
crates/bevy-origin-rebasing/src/: events.rs  lib.rs
crates/bevy_dynamic_object_scaling/: Cargo.toml
crates/bevy_dynamic_object_scaling/src/: events.rs  lib.rs  tags.rs
examples/: aaron_test.rs  render_to_texture.rs
src/: controller.rs  event.rs  lib.rs  log.rs  look.rs  main.rs  mouse.rs  scale.rs  utils.rs
src/cameras/: event.rs  mod.rs  tag.rs  third_person.rs
src/controllers/: character.rs  event.rs  mod.rs  tag.rs
src/gravity/: body.rs  mod.rs  resources.rs
src/look/: look.rs  mod.rs
src/spawn/: planets.rs
