[package]
name = "space"
version = "0.1.0"
authors = ["GUTTERTRASH <shagohad@gmail.com>"]
edition = "2018"
categories = ["game-engines", "graphics", "gui", "rendering"]

[workspace]
members = ["crates/*"]

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy-inspector-egui = "*"
bevy-dynamic-object-scaling = { path = "crates/bevy-dynamic-object-scaling" }
bevy-dynamic-billboarding = { path = "crates/bevy-dynamic-billboarding" }
rand = "0.8"

[[example]]
name = "render_to_texture"
path = "examples/render_to_texture.rs"